[gd_scene load_steps=2 format=3 uid="uid://dqq5u51asy67a"]

[ext_resource type="Script" path="res://Scripts/DialogueBox.gd" id="1_n0iao"]

[node name="Control" type="Control"]
layout_mode = 3
anchor_left = 0.007
anchor_top = 0.012
anchor_right = 1.0
anchor_bottom = 0.963
offset_left = -0.0640001
offset_top = -7.776
offset_right = 8.0
offset_bottom = 15.976
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_n0iao")

[node name="DialogueBox" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.7
anchor_right = 0.993
anchor_bottom = 1.0
offset_left = -0.0640001
offset_top = -3.05176e-05
offset_right = 0.0639648

[node name="DialoguePanel" type="Panel" parent="DialogueBox"]
layout_mode = 2

[node name="DialogueText" type="TextEdit" parent="DialogueBox/DialoguePanel"]
light_mask = 0
use_parent_material = true
layout_mode = 2
anchor_left = 0.014
anchor_top = 0.25
anchor_right = 0.986
anchor_bottom = 0.88
offset_left = 0.0960016
offset_right = -1.09583
offset_bottom = 0.039978
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Placeholder Text"

[node name="Narrator" type="TextEdit" parent="DialogueBox/DialoguePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.042
anchor_right = 0.12
anchor_bottom = 0.25
offset_left = 0.144001
offset_top = -0.0639715
offset_right = -0.319992
offset_bottom = 2.28882e-05
placeholder_text = "Narrator"

[node name="PlayerControls" type="HBoxContainer" parent="."]
layout_mode = 2
anchor_left = 0.007
anchor_top = 0.6
anchor_right = 0.222
anchor_bottom = 0.7
offset_left = -0.0640001
offset_right = 0.255981
offset_bottom = -3.05176e-05

[node name="AutoPlay" type="Button" parent="PlayerControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "AP"

[node name="Rewind" type="Button" parent="PlayerControls"]
layout_mode = 2
text = "Rewind"

[node name="PausePanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.014
anchor_top = 0.025
anchor_right = 0.118
anchor_bottom = 0.5
offset_left = -8.128
offset_top = -8.0
offset_right = 0.0639954

[node name="ResumeButton" type="Button" parent="PausePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.043
anchor_right = 0.56
anchor_bottom = 0.13
offset_top = 0.176
offset_bottom = 0.159996
text = "Resume"

[node name="Save Game" type="Button" parent="PausePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.174
anchor_right = 0.56
anchor_bottom = 0.261
offset_top = -0.0320053
offset_bottom = -0.0480042
text = "Save"

[node name="Load Game" type="Button" parent="PausePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.304
anchor_right = 0.56
anchor_bottom = 0.391
offset_top = 0.127991
offset_bottom = 0.111984
text = "Load"

[node name="Gallery" type="Button" parent="PausePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.435
anchor_right = 0.56
anchor_bottom = 0.522
offset_top = -0.0800171
offset_bottom = -0.0960083
text = "Gallery"

[node name="Settings" type="Button" parent="PausePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.565
anchor_right = 0.56
anchor_bottom = 0.649
offset_top = 0.0800018
offset_bottom = 0.167984
text = "Settings"

[node name="Main Menu" type="Button" parent="PausePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.696
anchor_right = 0.56
anchor_bottom = 0.783
offset_top = -0.128021
offset_bottom = -0.144012
text = "Main Menu"

[connection signal="pressed" from="PlayerControls/AutoPlay" to="." method="APbutton"]
[connection signal="pressed" from="PlayerControls/Rewind" to="." method="Rewind"]
[connection signal="pressed" from="PausePanel/ResumeButton" to="." method="resume"]
[connection signal="pressed" from="PausePanel/Save Game" to="." method="savegame"]
[connection signal="pressed" from="PausePanel/Load Game" to="." method="LoadGame"]
[connection signal="pressed" from="PausePanel/Gallery" to="." method="Gallery"]
[connection signal="pressed" from="PausePanel/Settings" to="." method="Settings"]
[connection signal="pressed" from="PausePanel/Main Menu" to="." method="_MainMenu"]
